--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#certifications" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Certifications</span></a></li>
 <!--          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>-->
-          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+<!--          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>-->
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -794,7 +794,7 @@
     <!-- End Testimonials Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
+    <!--<section id="contact" class="contact">
       <div class="container">
 
         <div class="section-title">
@@ -861,7 +861,7 @@
         </div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section>--><!-- End Contact Section -->
 
   </main><!-- End #main -->
 
